--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,24 @@
 name: github
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
   sdk: ^3.6.2
 
 dependencies:
+  bloc: ^9.0.0
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  dio: ^5.8.0+1
-  bloc: ^9.0.0
-  equatable: ^2.0.7
   flutter_bloc: ^9.1.1
   get_it: ^8.0.3
-  injectable: ^2.5.0
-  url_launcher: ^6.3.1
-  pretty_dio_logger: ^1.4.0
   infinite_scroll_pagination: ^5.1.0
+  injectable: ^2.5.0
+  pretty_dio_logger: ^1.4.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.15
