--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,13 @@ dependencies:
   url_launcher: ^6.3.1
 
 dev_dependencies:
+  bloc_test: ^10.0.0
   build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.7.0
+  mockito: ^5.4.5
   very_good_analysis: ^7.0.0
 
 flutter:
